Fix menu button icons collapsing

--- a/app/css/icons.css
+++ b/app/css/icons.css
@@ -1,3 +1,3 @@
 .icon-mr {
-  margin-right: 10px;
+  margin-right: 8px;
 }
